--- a/assets/sass/list-style.sass
+++ b/assets/sass/list-style.sass
@@ -58,6 +58,10 @@
 			height: 100%
 			flex-flow: column wrap
 			color: white
+			.post-description
+				margin: 0
+				p
+					margin: 0
 			a
 				color: white
 				font-weight: bold
@@ -90,4 +94,16 @@
 			&:hover
 				background: white
 				color: $darkgray
+		.asset-list
+			padding: 0
+			display: flex
+			flex-flow: row wrap
+			margin: 0
+			.asset-item
+				list-style: none
+				margin: 10px 10px 10px 0
+				padding: 0
+				padding: 3px 10px
+		.read-more
+			width: 13ch
 	
