--- a/assets/sass/creating.sass
+++ b/assets/sass/creating.sass
@@ -1,6 +1,10 @@
 body.creating
 	.main-header
 		background: rgba(darken($creating-focus-color, 10%), .8)
+		#menu-toggle
+			svg
+				fill: $creating-focus-color !important
+				color: $creating-focus-color !important
 
 body.creating.section
 	background-color: $creating-focus-color
@@ -9,6 +13,11 @@ body.creating.section
 		color: $darkgray
 
 body.creating.single
+	#menu-toggle
+		background: $creating-focus-color
+		svg
+			fill: white !important
+			color: white !important
 	h1,h2,h3,h4,h5,h6
 		color: darken($creating-focus-color, 20%)
 	a
