--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,7 +3,7 @@
 {{ define "main-block"}}
 
 	<p class="bio-paragraph">
-		Keisha S Perkins is a freelance designer and developer who <a href='{{ "/teaching/" | relURL }}' class=" bio-activity-link teaches">teaches</a> and <a href='{{ "/organizing/" | relURL }}' class="organizes bio-activity-link ">organizes</a> in her community, and <a href="#" class="writes bio-activity-link ">writes</a> and <a href='{{ "/creating/" | relURL }}' class="creates bio-activity-link ">creates</a> for the web.
+		Keisha S Perkins is a freelance designer and developer who <a href='{{ "/teaching/" | relURL }}' class=" bio-activity-link teaches">teaches</a> and <a href='{{ "/organizing/" | relURL }}' class="organizes bio-activity-link ">organizes</a> in her community, and <a href="/writing" class="writes bio-activity-link ">writes</a> and <a href='{{ "/creating/" | relURL }}' class="creates bio-activity-link ">creates</a> for the web.
 	</p>
 
 {{ end }}
