--- a/layouts/partials/taxonomy-and-term-card.html
+++ b/layouts/partials/taxonomy-and-term-card.html
@@ -1,4 +1,7 @@
-<a href=" {{ .Permalink }} "class="result">
+<a 
+	class="result"
+	target='{{ if .Params.external }}_blank{{else}}_self{{ end }}'  
+	href='{{ if .Params.external }}	{{ .Params.external }}{{ else if .Params.internal}}	{{ .Params.internal }}{{ else }}	{{ .Permalink }}{{ end }}'>
 	<h2 class="result-title">
 		<span class="what">{{ if eq .Type "writing" }}Blog Post{{end}}{{ .Params.what }}:</span> {{ .Title }}
 	</h2>
