--- a/assets/sass/main-header.sass
+++ b/assets/sass/main-header.sass
@@ -4,16 +4,22 @@
 	display: flex
 	align-items: center
 	#menu-toggle
-		align-self: flex-end
-		background: none
-		border: none
 		position: fixed
+		bottom: 1.5rem
+		right: 1.5rem
+		width: 3rem
+		height: 3rem
+		background: white
+		box-shadow: 1px 1px 5px rgba($darkgray, .3)
+		border: none
+		border-radius: 50%
 		z-index: 11
-		top: 10px
-		right: 10px
 		svg
 			height: 1.5rem
 			width: 1.5rem		
+			fill: $main-focus-color !important
+			color: $main-focus-color !important
+			opacity: 100% 
 		@media screen and (min-width: 700px)
 			display: none	
 	#main-mini-menu
