--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -3,11 +3,13 @@
 @import main-header
 @import home-style
 @import list-style
+@import four-oh-four
 @import taxonomy-style
 @import single-style
 @import creating
-@import organizing
+@import andmore
 @import writing
 @import teaching
 @import paginator
 @import share-style
+
