--- a/assets/sass/variables.sass
+++ b/assets/sass/variables.sass
@@ -10,7 +10,7 @@ $writing-focus-color: $purple
 $teaching-focus-color: $pink
 $creating-focus-color: $gold
 $main-focus-color: $teal
-$organizing-focus-color: $blue
+$andmore-focus-color: $blue
 
 $sans-serif: 'Poppins', sans-serif
 
