--- a/layouts/partials/main-header.html
+++ b/layouts/partials/main-header.html
@@ -4,10 +4,11 @@
 			<use href="#menu" />
 		</svg>
 	</button>
-	<div class="menu-wrapper" id="main-mini-menu">
+	<div id="logo" class="logo"><a href="/">Keisha&nbsp;S&nbsp;Perkins</a></div>
+	<menu class="menu-wrapper" id="main-mini-menu">
 		{{ partial "main-nav.html" . }}
-	</div>
-	<div class="menu-wrapper" id="main-max-menu">
+	</menu>
+	<menu class="menu-wrapper" id="main-max-menu">
 		{{ partial "main-nav.html" . }}
-	</div>
+	</menu>
 </header>
