--- a/assets/sass/main-header.sass
+++ b/assets/sass/main-header.sass
@@ -1,8 +1,32 @@
 .main-header
-	background: rgba(black, .2)
+	// background: rgba(black, .2)
 	grid-column: 1 / -1
 	display: flex
 	align-items: center
+	justify-content: flex-end
+	@media screen and (min-width: 820px)
+		background: rgba(black, .2)
+		justify-content: flex-start
+	#logo
+		height: 100%
+		display: flex
+		justify-content: flex-start
+		align-items: center
+		float: right
+		@media screen and (min-width: 820px)
+			// align-self: flex-start
+		a
+			transition: border .2s ease-in-out
+			margin: 0 15px
+			letter-spacing: .9px
+			font-size: 1.1rem
+			text-transform: uppercase
+			padding: 5px 0 0 0
+			text-decoration: none
+			color: white
+			border-bottom: 1.5px solid transparent
+			&:hover
+				border-color: white
 	#menu-toggle
 		position: fixed
 		bottom: 1.5rem
@@ -14,13 +38,17 @@
 		border: none
 		border-radius: 50%
 		z-index: 11
+		transition: background .3s ease
 		svg
 			height: 1.5rem
+			fill: $darkgray !important
 			width: 1.5rem		
-			fill: $main-focus-color !important
-			color: $main-focus-color !important
 			opacity: 100% 
-		@media screen and (min-width: 700px)
+			transition: fill .3s ease
+		&:hover
+			svg
+				fill: $main-focus-color !important
+		@media screen and (min-width: 820px)
 			display: none	
 	#main-mini-menu
 		position: fixed
@@ -30,6 +58,7 @@
 		background: rgba(black, .9)
 		width: 100%
 		padding-top: 3rem
+		padding-left: 0
 		z-index: 10
 		top: -150%
 		transition: top .3s ease-in-out
@@ -51,12 +80,12 @@
 				&:hover
 					border-color: white
 		&.open
-			top: 0
+			top: -1rem
 			right: 0
 			bottom: 0
 			left: 0
 			height: 100%
-		@media screen and (min-width: 700px)
+		@media screen and (min-width: 820px)
 			display: none
 	#main-max-menu
 		width: 100%
@@ -81,5 +110,5 @@
 				&:hover
 					border-color: white
 		display: none
-		@media screen and (min-width: 700px)
+		@media screen and (min-width: 820px)
 			display: initial
