Contact and Style Changes - Added 'Contact' page - Added new media query to handle main-nav toggle

--- a/assets/sass/single-style.sass
+++ b/assets/sass/single-style.sass
@@ -86,10 +86,7 @@ body.single
 		.post-image-figure
 			width: 100%
 			margin: 1.5rem auto
-			// border-radius: 5px
-			// background: #dddddd
 			a
-				// border-radius: 5px
 				.post-image
 					width: 100%
 					border-radius: 5px
@@ -105,12 +102,19 @@ body.single
 		pre 
 			padding: 1rem
 			border-radius: 5px
+			width: 100%
+			box-sizing: border-box
 			background: black
+			white-space: pre-wrap
+			white-space: -moz-pre-wrap !important
+			white-space: -pre-wrap             
+			white-space: -o-pre-wrap
 			code
 				color: white
 				background: none
 				border-radius: 0
 				border: 0
+				font-size: .9rem
 		.video-wrapper 
 			position: relative
 			padding-bottom: 56.25% /* 16:9 */
