--- a/assets/sass/variables.sass
+++ b/assets/sass/variables.sass
@@ -1,16 +1,18 @@
 $lightgray: #dfdfdf
 $darkgray: #333333
-$pink: #F5508F
+$pink: #ef2976
 $purple: #913DC6
 $gold: #DEA336
 $teal: #00AF94
 $blue: #5995D1
+$orange: #ff6a00
 
 $writing-focus-color: $purple
 $teaching-focus-color: $pink
 $creating-focus-color: $gold
 $main-focus-color: $teal
 $andmore-focus-color: $blue
+$contact-focus-color: $orange
 
 $sans-serif: 'Poppins', sans-serif
 
