--- a/assets/sass/main-header.sass
+++ b/assets/sass/main-header.sass
@@ -1,11 +1,12 @@
 .main-header
-	// background: rgba(black, .2)
+	background: rgba(black, .2)
 	grid-column: 1 / -1
 	display: flex
 	align-items: center
 	justify-content: flex-end
-	@media screen and (min-width: 820px)
+	@media screen and (min-width: 930px)
 		background: rgba(black, .2)
+	@media screen and (min-width: 800px)
 		justify-content: flex-start
 	#logo
 		height: 100%
@@ -13,7 +14,7 @@
 		justify-content: flex-start
 		align-items: center
 		float: right
-		@media screen and (min-width: 820px)
+		@media screen and (min-width: 930px)
 			// align-self: flex-start
 		a
 			transition: border .2s ease-in-out
@@ -48,7 +49,18 @@
 		&:hover
 			svg
 				fill: $main-focus-color !important
-		@media screen and (min-width: 820px)
+		@media screen and (min-width: 800px)
+			top: 0
+			right: 0
+			background: none
+			box-shadow: none
+			svg
+				fill: white !important
+			&:hover
+				background: none
+				svg
+					fill: $darkgray !important
+		@media screen and (min-width: 930px)
 			display: none	
 	#main-mini-menu
 		position: fixed
@@ -85,7 +97,7 @@
 			bottom: 0
 			left: 0
 			height: 100%
-		@media screen and (min-width: 820px)
+		@media screen and (min-width: 930px)
 			display: none
 	#main-max-menu
 		width: 100%
@@ -110,5 +122,5 @@
 				&:hover
 					border-color: white
 		display: none
-		@media screen and (min-width: 820px)
+		@media screen and (min-width: 930px)
 			display: initial
