Improved modularity of styles - Added mixins for color schemes on sections and single pages - Added variables for media queries

--- a/assets/sass/base-style.sass
+++ b/assets/sass/base-style.sass
@@ -4,13 +4,14 @@ html
 	color: $darkgray
 body
 	padding: 0
+	height: 100%
 	min-height: 100vh
 	background-repeat: no-repeat
 	margin: 0
 	display: grid
 	grid-template-rows: 50px 1fr 30px
 	grid-template-columns: 20px 1fr 20px
-	@media screen and (min-width: 700px)
+	@media screen and ($medium-small-screens)
 		grid-template-columns: minmax(80px, 1fr) minmax(300px, 1200px) minmax(80px, 1fr)
 .main-wrapper
 	display: flex
