--- a/assets/sass/single-style.sass
+++ b/assets/sass/single-style.sass
@@ -2,7 +2,7 @@ body.single
 	background-color: white
 	h1,h2,h3,h4,h5,h6
 		color: darken($main-focus-color, 10%)
-	@media screen and (min-width: 800px)
+	@media screen and ($large-screens)
 		grid-template-columns: 1fr minmax(250px, 750px) 1fr
 	blockquote
 		border-left: 2px solid $main-focus-color
