--- a/assets/sass/variables.sass
+++ b/assets/sass/variables.sass
@@ -11,8 +11,13 @@ $writing-focus-color: $purple
 $teaching-focus-color: $pink
 $creating-focus-color: $gold
 $main-focus-color: $teal
+$home-focus-color: $teal
 $andmore-focus-color: $blue
 $contact-focus-color: $orange
+
+$medium-small-screens: 'min-width: 650px'
+$medium-screens: 'min-width: 800px'
+$large-screens: 'min-width: 930px'
 
 $sans-serif: 'Poppins', sans-serif
 
