--- a/assets/sass/writing.sass
+++ b/assets/sass/writing.sass
@@ -1,40 +1,9 @@
 body.writing
-	
-		#menu-toggle
-			svg
-				fill: $darkgray !important
-			&:hover
-				svg
-					fill: $writing-focus-color !important
+	+colorThemeRoot($writing-focus-color)
 body.writing.section
-	background-color: $writing-focus-color
-	background-image: radial-gradient(lighten($writing-focus-color, 10%),darken($writing-focus-color, 2%))
+	+colorThemeSection($writing-focus-color)
 body.writing.single
-	.main-header
-		background: rgba(darken($writing-focus-color, 10%), .8)
-	#menu-toggle
-		background: $darkgray
-		svg
-			fill: white !important
-			color: white !important
-		&:hover
-			background: white !important
-	h1,h2,h3,h4,h5,h6
-		color: darken($writing-focus-color, 20%)
-	a
-		color: $writing-focus-color
-		&:hover
-			color: darken($writing-focus-color, 10%)
-	code
-		background-color: rgba($writing-focus-color, .1)
-		border-color: $writing-focus-color
-	blockquote
-		border-color: $writing-focus-color
-		background-color: rgba($writing-focus-color, .1)
-		&:before
-			color: $writing-focus-color
-		&:after
-			color: $writing-focus-color
+	+colorThemeSingle($writing-focus-color)
 
 
 	
