--- a/assets/sass/list-style.sass
+++ b/assets/sass/list-style.sass
@@ -4,13 +4,13 @@
 	font-size: 2rem
 	width: 100%
 	line-height: .9
-	@media screen and (min-width: 700px)
+	@media screen and ($medium-small-screens)
 		font-size: 3rem
 	.subtitle
 		color: $darkgray
 		size: 1rem
 		text-transform: none
-		@media screen and (min-width: 700px)
+		@media screen and ($medium-small-screens)
 			font-size: 2rem
 .list-content
 	margin-top: 1.5rem
@@ -19,7 +19,7 @@
 	justify-content: center
 	align-items: center
 	width: 100%
-	@media screen and (min-width: 600px)
+	@media screen and ($medium-small-screens)
 		display: grid
 		grid-template-columns: repeat(auto-fit, minmax(250px, 1fr))
 		grid-gap: 10px
