Minor Style Tweaks, Restructuring - Changed icon for external link buttons to .svg - 'Activate Conference' notes page is now a branch

--- a/assets/sass/list-style.sass
+++ b/assets/sass/list-style.sass
@@ -91,9 +91,15 @@
 			color: white
 			text-decoration: none
 			transition: color, background .3s ease
+			svg
+				fill: white !important
+				height: .7rem
+				width: .7rem
 			&:hover
 				background: white
 				color: $darkgray
+				svg
+					fill: $darkgray !important
 		.asset-list
 			padding: 0
 			display: flex
