More restructuring and consolidation - Both pages and sections are listed in section pages - Logic for determining .Type is in on place - Logic added for listing page resources

--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -9,9 +9,13 @@
 <section class="list-content">
 
 
-	{{ range .Pages }}
-		{{ partial "post-card.html" .}}
-	{{ end }}
+	{{ $ss := append .CurrentSection.Pages .CurrentSection.Sections}}
+	{{ $pag := .Paginate $ss 10}}
+			{{ range $pag.Pages.ByDate.Reverse }}
+				{{ if not .Params.ignore }}
+					{{ partial "post-card.html" . }}
+				{{ end }}
+			{{ end }}
 
 	<section class="paginator-wrapper">
 		{{ template "_internal/pagination.html" . }}
