Tinkering with cards

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -4,6 +4,7 @@
 @import main-header
 @import home-style
 @import list-style
+@import cards
 @import four-oh-four
 @import taxonomy-style
 @import single-style
