--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,7 @@
 
 {{ define "main-block"}}
 	<p class="bio-paragraph">
-		Keisha S Perkins is a freelance designer and developer who <a href='{{ "/teaching/" | relURL }}' class=" bio-activity-link teaches">teaches</a>, <a href="/writing" class="writes bio-activity-link ">writes</a>, and <a href='{{ "/creating/" | relURL }}' class="creates bio-activity-link ">creates</a> things for the web. She does <a href='{{ "/andmore/" | relURL }}' class="andmore bio-activity-link ">other cool stuff</a>, too.
+		Keisha S Perkins is a freelance designer and developer from Baton Rouge, Louisiana who <a href='{{ "/teaching/" | relURL }}' class=" bio-activity-link teaches">teaches</a> and <a href="/writing" class="writes bio-activity-link ">writes</a><!-- , and <a href='{{ "/creating/" | relURL }}' class="creates bio-activity-link ">creates</a> things --> for the web. She does <a href='{{ "/andmore/" | relURL }}' class="andmore bio-activity-link ">other cool stuff</a>, too.
 	</p>
 
 {{ end }}
