--- a/layouts/partials/main-nav.html
+++ b/layouts/partials/main-nav.html
@@ -2,7 +2,7 @@
 	<a href='{{ "/" | relURL }}' class="main-nav-link">Home</a>
 	<a href='{{ "/teaching/" | relURL }}' class="main-nav-link">Teaching</a>
 	<a href='{{ "/writing/" | relURL }}' class="main-nav-link">Writing</a>
-	<a href='{{ "/creating/" | relURL }}' class="main-nav-link">Creating</a>
+	<!-- <a href='{{ "/creating/" | relURL }}' class="main-nav-link">Creating</a> -->
 	<a href='{{ "/andmore/" | relURL }}' class="main-nav-link">And More</a>
 	<a href='{{ "/contact/" | relURL }}' class="main-nav-link">Contact</a>
 
