--- a/assets/sass/list-style.sass
+++ b/assets/sass/list-style.sass
@@ -49,6 +49,12 @@
 				margin: 0
 				letter-spacing: .5px
 				line-height: 1.2
+		.card-image-wrapper
+			width: 100%
+			margin: 0
+			.card-image
+				width: 100%
+				object-fit: cover
 		.card-body
 			margin: 0
 			padding: 5px 10px
@@ -107,7 +113,7 @@
 			margin: 0
 			.asset-item
 				list-style: none
-				margin: 10px 10px 10px 0
+				margin: 5px 10px 5px 0
 				padding: 0
 				padding: 3px 10px
 		.read-more
