--- a/assets/sass/andmore.sass
+++ b/assets/sass/andmore.sass
@@ -4,3 +4,5 @@ body.andmore.section
 	+colorThemeSection($andmore-focus-color)
 body.andmore.single
 	+colorThemeSingle($andmore-focus-color)
+body.andmore.special-page
+	+colorThemeSingle($andmore-focus-color)
