--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,5 +1,5 @@
 {{ partial "meta.html" . }}
-<body class='{{ .Type }}{{ if .Layout }} {{ .Layout }}{{ else if eq .Kind "page" }} single{{ else if eq .Kind "section" }} section{{ else if eq .Kind "home" }} home{{ else if eq .Kind "taxonomy" }} taxonomy{{ else if eq .Kind "404" }} four-oh-four{{ else if eq .Kind "taxonomyTerm" }} taxonomyTerm{{ else }} standard{{end}}'>
+<body class='{{ if .Params.whatspecial }}{{ .Params.whatspecial}}{{end}} {{ .Type }}{{ if .Layout }} {{ .Layout }}{{ else if eq .Kind "page" }} single{{ else if eq .Kind "section" }} section{{ else if eq .Kind "home" }} home{{ else if eq .Kind "taxonomy" }} taxonomy{{ else if eq .Kind "404" }} four-oh-four{{ else if eq .Kind "taxonomyTerm" }} taxonomyTerm{{ else }} standard{{end}}'>
 	
 	{{ if ne .Kind "404" }}
 		{{ partial "main-header.html"}}
