Make disqus full-width

--- a/assets/sass/base-style.sass
+++ b/assets/sass/base-style.sass
@@ -13,6 +13,8 @@ body
 	grid-template-columns: 20px 1fr 20px
 	@media screen and ($medium-small-screens)
 		grid-template-columns: minmax(80px, 1fr) minmax(300px, 1200px) minmax(80px, 1fr)
+#disqus_thread
+	width: 100%		
 .main-wrapper
 	display: flex
 	align-items: center
