--- a/assets/sass/list-style.sass
+++ b/assets/sass/list-style.sass
@@ -10,6 +10,7 @@
 		color: $darkgray
 		size: 1rem
 		text-transform: none
+		font-weight: 600
 		@media screen and ($medium-small-screens)
 			font-size: 2rem
 .list-content
@@ -24,7 +25,7 @@
 		grid-template-columns: repeat(auto-fit, minmax(250px, 1fr))
 		grid-gap: 30px
 	.card
-		background: rgba(black, .2)
+		background: #f3f3f3
 		margin-bottom: 1rem
 		border-radius: 6px
 		overflow: hidden
@@ -36,19 +37,19 @@
 		flex-flow: column
 		justify-content: space-between
 		.card-header
-			background: rgba(black, .3)
-			padding: 5px 10px
-			margin: 0
+			padding: 5px 10px 0px 10px
+			margin: 0 0 10px 0
 			min-height: 3rem
-			display: flex
-			align-items: center
 			.post-title
 				color: white
-				font-size: 1rem
+				font-size: 1.1rem
+				font-weight: 600
 				padding: 0
 				margin: 0
 				letter-spacing: .5px
 				line-height: 1.2
+				a
+					text-decoration: none
 		.card-image-wrapper
 			width: 100%
 			margin: 0
@@ -57,25 +58,25 @@
 				object-fit: cover
 		.card-body
 			margin: 0
-			padding: 5px 10px
+			padding: 0 10px 5px 10px
 			font-size: .9rem
 			display: flex
 			justify-content: space-between
 			height: 100%
 			flex-flow: column wrap
-			color: white
+			color: #222
 			.post-description
 				margin: 0
 				p
 					margin: 0
 			a
-				color: white
+				font-color: $darkgray
 				font-weight: bold
 		.card-footer
 			padding: 0 10px 1px 
-			color: white
+			color: #222
 			font-size: .6rem
-			border-top: 1px dotted white
+			border-top: 1px dotted #222
 			.author-names
 				display: inline
 				padding: 0
@@ -88,24 +89,23 @@
 			font-size: .7rem
 			font-weight: bold
 			text-transform: uppercase
-			border: 1px solid white
+			border: 1px solid #222
 			border-radius: 10px
 			padding: 3px 10px
 			margin: 1rem 0 .4rem 0
-			color: white
+			color: #222
 			text-align: center
-			color: white
 			text-decoration: none
 			transition: color, background .3s ease
 			svg
-				fill: white !important
+				fill: #222 !important
 				height: .7rem
 				width: .7rem
 			&:hover
-				background: white
-				color: $darkgray
+				background: #222
+				color: white
 				svg
-					fill: $darkgray !important
+					fill: white !important
 		.asset-list
 			padding: 0
 			display: flex
