--- a/assets/sass/main-header.sass
+++ b/assets/sass/main-header.sass
@@ -6,6 +6,9 @@
 	justify-content: flex-end
 	@media screen and ($medium-screens)
 		justify-content: flex-start
+		position: fixed
+		width: 100%
+		height: 50px
 	#logo
 		height: 100%
 		display: flex
@@ -108,6 +111,7 @@
 			font-weight: bold
 			width: 100%
 			text-align: center
+			font-weight: 500
 			.main-nav-link
 				transition: border .2s ease-in-out
 				margin: 0 15px
