--- a/assets/sass/list-style.sass
+++ b/assets/sass/list-style.sass
@@ -1,5 +1,5 @@
 .list-page-title
-	color: white
+	color: #ffffff
 	text-transform: uppercase
 	font-size: 2rem
 	width: 100%
@@ -25,7 +25,7 @@
 		grid-template-columns: repeat(auto-fit, minmax(250px, 1fr))
 		grid-gap: 30px
 	.card
-		background: #f3f3f3
+		background: #f2f2f2
 		margin-bottom: 1rem
 		border-radius: 6px
 		overflow: hidden
