--- a/assets/sass/list-style.sass
+++ b/assets/sass/list-style.sass
@@ -25,7 +25,7 @@
 		grid-template-columns: repeat(auto-fit, minmax(250px, 1fr))
 		grid-gap: 30px
 	.card
-		background: #f2f2f2
+		background: #ffffff
 		margin-bottom: 1rem
 		border-radius: 6px
 		overflow: hidden
