Quick style changed

--- a/assets/sass/single-style.sass
+++ b/assets/sass/single-style.sass
@@ -82,6 +82,12 @@ body.single
 		margin-top: 2rem
 		line-height: 1.5
 		width: 100%
+		font-family: $serif
+		font-size: 1.15rem
+		font-weight: 400
+		h1,h2,h3,h4,h5,h6
+			font-family: $sans-serif
+			margin-bottom: 0 
 		
 		.post-image-figure
 			width: 100%
