--- a/assets/sass/variables.sass
+++ b/assets/sass/variables.sass
@@ -19,5 +19,6 @@ $medium-small-screens: 'min-width: 650px'
 $medium-screens: 'min-width: 800px'
 $large-screens: 'min-width: 930px'
 
-$sans-serif: 'Poppins', sans-serif
+$sans-serif: 'Montserrat', sans-serif
+$serif: 'IBM Plex Serif', serif
 
